Hold & gym improves & gym logo pipeline
